fix: Truncate Entry, Asset and API Key titles

--- a/src/stylesheets/layouts/workbench.styl
+++ b/src/stylesheets/layouts/workbench.styl
@@ -143,6 +143,9 @@ $workbench-middle-width = 100% - (2 * $workbench-sidebar-width)
     align-self: center
 
   &__title
+    flex-shrink: 1
+    text-overflow: ellipsis
+    overflow: hidden
     font-size: $tab-header-font-size
     line-height: $workbench-header-height
     margin: 0 0.6em 0 0.1ex
